<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackingActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <org.osmdroid.views.MapView android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_play_stop_trace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bottom_sheet_itineraries"
        app:layout_anchorGravity="top|right|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_play_arrow_24"
        />

    <LinearLayout
        android:id="@+id/bottom_sheet_itineraries"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        >

        <LinearLayout
            android:id="@+id/bottom_sheet_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_directions_walk_24_white"
                    />

                <TextView
                    android:id="@+id/text_view_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_null"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="18sp"
                    android:layout_marginEnd="16dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_baseline_timer_24"
                    />

                <TextView
                    android:id="@+id/text_view_elapsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/primary_text_dark"
                    android:text="@string/elapsed_null"
                    android:textSize="18sp"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/bottom_sheet_header_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itinerary_bottom_sheet_subtitle"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="14sp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                />

        </LinearLayout>

        <ListView
            android:id="@+id/itineraries_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/text_view_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/itinerary_list_is_empty"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/button_refresh_itineraries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:textColor="@android:color/primary_text_light"
                style="?android:attr/buttonBarButtonStyle"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>